# cpp_project_template

./: .gitignore  CMakeLists.txt  README.md
data/: simple.gv
src/: main.cpp
test/: CMakeLists.txt  test.cpp
